[project]
name = "Alchemium"
version = "0.0.1"
description = "Удобный CRUD-слой над SQLAlchemy"
readme = "README.md"
authors = [{ name = "Твоё Имя", email = "you@email.com" }]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy>=2.0,<3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
